Update content and reset css styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>firesetter</title>
+  <title>Web Design by firesetter</title>
+  <link rel="stylesheet" type="text/css" href="reset.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     <div class="navbar-item">Contact</div>
   </div>
   <div class="about">
-    <div class="about-me"></div>
+    <div class="about-me">Full Stack Developer focused on inspired design. Practical experience with task automation and UI/UX optimization.</div>
     <img src="me.jpg" alt="me" class="about-img">
     <div class="about-skills"></div>
   </div>
@@ -31,7 +32,7 @@
   <footer class="footer">
     <div class="footer-about">
       <h1 class="footer-about-header">ABOUT THIS PAGE</h1>
-      <div class="footer-about-content">Fueled by passion and kaffee</div>
+      <div class="footer-about-content">Made with 🔥 and ☕</div>
     </div>
     <div class="footer-social">
       <h1 class="footer-social-header">AROUND THE WEB</h1>
