--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Web Design by firesetter</title>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+
   <link rel="stylesheet" type="text/css" href="reset.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
 <body>
@@ -15,20 +18,26 @@
     <div class="navbar-item">Portfolio</div>
     <div class="navbar-item">Contact</div>
   </div>
+
   <div class="about">
     <div class="about-me">Full Stack Developer focused on inspired design. Practical experience with task automation and UI/UX optimization.</div>
-    <img src="me.jpg" alt="me" class="about-img">
+    <img class="about-img" src="me.jpg" alt="me">
     <div class="about-skills"></div>
   </div>
+
   <div class="portfolio">
     <header class="portfolio-header">Portfolio</header>
-    <img src="" alt="" class="portfolio-img">
+    <div class="portfolio-images">
+      <a href="hawking.html"><img class="portfolio-img" src="./images/stephen-hawking.png" alt="Stephen Hawking tribute site"></a>
+      <a href="bard.html"><img class="portfolio-img" src="./images/bard.png" alt="Bard Music Manager"></a>
+    </div>
   </div>
+
   <div class="contact">
     <header class="contact-header">Contact Me</header>
     <div class="contact-me">To contact me for more information please email me.</div>
-
   </div>
+
   <footer class="footer">
     <div class="footer-about">
       <h1 class="footer-about-header">ABOUT THIS PAGE</h1>
@@ -37,11 +46,10 @@
     <div class="footer-social">
       <h1 class="footer-social-header">AROUND THE WEB</h1>
       <div class="footer-social-content">
-        <div class="footer-social-content-git"><a href="github">Github</a></div>
-        <div class="footer-social-content-twitter"><a href="twitter">twitter</a></div>
+        <div class="footer-social-content-git"><a href="https://github.com/firesetter">Github</a></div>
+        <div class="footer-social-content-twitter"><a href="https://twitter.com/firesetterdev">Twitter</a></div>
       </div>
     </div>
-
   </footer>
 </body>
 
