--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
 
   <div class="portfolio">
     <header class="portfolio-header">Portfolio</header>
-    <div class="portfolio-images">
-      <a href="hawking.html"><img class="portfolio-img" src="./images/stephen-hawking.png" alt="Stephen Hawking tribute site"></a>
-      <a href="bard.html"><img class="portfolio-img" src="./images/bard.png" alt="Bard Music Manager"></a>
-    </div>
+    <a href="hawking.html"><img class="portfolio-img" src="./images/stephen-hawking.png" alt="Stephen Hawking tribute site"></a>
+    <a href="bard.html"><img class="portfolio-img" src="./images/bard16_9.png" alt="Bard Music Manager"></a>
   </div>
 
   <div class="contact">
