--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="portfolio">
     <header class="portfolio-header">Portfolio</header>
     <a href="hawking.html"><img class="portfolio-img" src="./images/stephen-hawking.png" alt="Stephen Hawking tribute site"></a>
-    <a href="bard.html"><img class="portfolio-img" src="./images/bard16_9.png" alt="Bard Music Manager"></a>
+    <a href="bard.html"><img class="portfolio-img" src="./images/bard.png" alt="Bard Music Manager"></a>
   </div>
 
   <div class="contact">
