Add id's to main elements for navigation

--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
 
 <body>
   <div class="navbar">
-    <div class="navbar-item">About</div>
-    <div class="navbar-item">Portfolio</div>
-    <div class="navbar-item">Contact</div>
+    <a href="#about" class="navbar-item">About</a>
+    <a href="#portfolio" class="navbar-item">Portfolio</a>
+    <a href="#contact" class="navbar-item">Contact</a>
   </div>
 
-  <div class="about">
+  <div id="about" class="about">
     <div class="about-me">Full Stack Developer focused on inspired design. Practical experience with task automation and UI/UX optimization.</div>
     <img class="about-img" src="me.jpg" alt="me">
     <div class="about-skills"></div>
   </div>
 
-  <div class="portfolio">
+  <div id="portfolio" class="portfolio">
     <header class="portfolio-header">Portfolio</header>
     <a href="hawking.html"><img class="portfolio-img" src="./images/stephen-hawking.png" alt="Stephen Hawking tribute site"></a>
     <a href="bard.html"><img class="portfolio-img" src="./images/bard.png" alt="Bard Music Manager"></a>
   </div>
 
-  <div class="contact">
+  <div id="contact" class="contact">
     <header class="contact-header">Contact Me</header>
     <div class="contact-me">To contact me for more information please email me.</div>
   </div>
