--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
 
   <div id="portfolio" class="portfolio">
     <header class="portfolio-header">Portfolio</header>
-    <a href="hawking.html"><img class="portfolio-img" src="./images/stephen-hawking.png" alt="Stephen Hawking tribute site"></a>
-    <a href="bard.html"><img class="portfolio-img" src="./images/bard.png" alt="Bard Music Manager"></a>
+    <a class="portfolio-link" href="hawking.html">
+      <img class="portfolio-link-img" src="./images/stephen-hawking.png" alt="Stephen Hawking tribute site">
+    </a>
+    <a class="portfolio-link" href="bard.html">
+      <img class="portfolio-link-img" src="./images/bard.png" alt="Bard Music Manager">
+    </a>
   </div>
 
   <div id="contact" class="contact">
